# tenant-ai

./: .gitignore  Cargo.toml  LICENSE  README.md  signingkey.pub
.github/workflows/: ci.yml
crates/tenant-ai/: Apollo_Apartments.csv  Apollo_Apartments_patched.csv  Cargo.toml
crates/tenant-ai/src/: lib.rs
crates/tenant-ai/src/workflows/: apollo.rs  mod.rs
crates/tenant-ai/src/workflows/apollo/: mapping.rs  mod.rs  normalizer.rs  parser.rs
crates/tenant-ai/src/workflows/vacancy/: applications.rs  blueprint.rs  domain.rs  instance.rs  mod.rs  report.rs
crates/tenant-ai/src/workflows/vacancy/applications/: compliance.rs  domain.rs  mod.rs  repository.rs  router.rs  service.rs
crates/tenant-ai/src/workflows/vacancy/applications/evaluation/: config.rs  mod.rs  policy.rs  rules.rs
crates/tenant-ai/src/workflows/vacancy/applications/tests/: common.rs  compliance.rs  evaluation.rs  mod.rs  routing.rs  service.rs
crates/tenant-ai/src/workflows/vacancy/marketing/: drive.rs  mod.rs  publisher.rs
crates/tenant-ai/src/workflows/vacancy/report/: insights.rs  mod.rs  summary.rs  views.rs
crates/tenant-ai/tests/: apollo_vacancy_import.rs  marketing_publish.rs  vacancy_application_workflow.rs  vacancy_workflow.rs
docs/: APOLLO_APARTMENTS_WORKFLOW_PLAN.md  ARCHITECTURE.md  PROJECT_OVERVIEW.md  REPO_SURVEY.md  ROADMAP.md  VACANCY_APPLICATION_ROUTER_PLAN.md  VACANCY_INSIGHTS.md  WORKFLOW_PLAYBOOKS.md
docs/demo-output/: demo_apollo.md  demo_no_apollo.md
examples/: Househacking Analyses Worksheet 4.xlsx  Investment Property Analyzer Spreadsheet.xlsx
services/api/: Cargo.toml
services/api/src/: cli.rs  demo.rs  infra.rs  lib.rs  main.rs  routes.rs  server.rs
src/: error.rs  main.rs  telemetry.rs
src/config/: mod.rs
src/workflows/: apollo.rs  vacancy.rs
tests/: apollo_vacancy_import.rs  vacancy_workflow.rs
