[package]
name = "tenant-ai"
version = "0.1.0"
edition = "2021"
authors = ["Automation Team"]
description = "Web service orchestrating agentic workflows for property management automation."
license = "MIT"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["std", "serde"] }
csv = "1"
dotenvy = "0.15"
axum-prometheus = "0.9"
metrics-exporter-prometheus = "0.17"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
