[package]
name = "tenant-ai-api"
version = "0.1.0"
edition = "2021"
authors = ["Automation Team"]
license = "MIT"

[dependencies]
tenant-ai = { path = "../../crates/tenant-ai" }
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
axum-prometheus = "0.9"
chrono = { version = "0.4", features = ["std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
metrics-exporter-prometheus = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
